SQLite tietokanta tehty mallin mukaan ja raaka-aineitten lisäämisen toiminnallisuutta aloitettu

--- a/src/main/resources/templates/opiskelijat.html
+++ b/src/main/resources/templates/opiskelijat.html
@@ -7,7 +7,7 @@
     </head>
 
     <body>
-        <h1>Hei opiskelijat!</h1>
+        <h1>Smoothieitten raaka-aineet</h1>
 
         <ol>
             <li th:each="opiskelija: ${opiskelijat}">
