smoothieiden nimien lisääminen  ja listaaminen toteutettu. jostain syystä poistaminen ei vielä onnistu

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
         <h1>Heippa vaan!</h1>
 
         <p>Ja .. <span th:text="${viesti}">jotain?</span></p>
-
-        <p><a href="/opiskelijat">Tästä opiskelijalistaukseen.</a></p>
+        <p><a href="/smoothiet">Luo uusi smoothie</a></p>
+        <p><a href="/raakaaineet">Raaka-aineineet</a></p>
     </body>
 </html>
