--- a/src/main/resources/templates/smoothiet.html
+++ b/src/main/resources/templates/smoothiet.html
@@ -24,6 +24,34 @@
       <input type="text" name="smoothiennimi"/><br/>
       <input type="submit" value="Lisää uusi smoothie"/>
   </form>
+        <form method="POST" action="/smoothiet/ainesosalisatty">
+      Smoothien nimi:<br/>
+      <select name="smoothie">
+          <option th:each="smoothie: ${smoothiet}"
+                  th:value="${smoothie.nimi}"
+                  th:text="${smoothie.nimi}">
+              
+          </option>
+      </select>
+        <br/>
+        Mikä raaka-aine lisätään?
+        <select name="raakaAine">
+          <option th:each="raakaaine: ${raakaaineet}"
+                  th:value="${raakaaine.nimi}"
+                  th:text="${raakaaine.nimi}">
+              
+          </option>
+        </select><br/>
+        Järjestys<br/>
+        <input type="text" name="jarjestys"/><br/>
+      Määrä<br/>
+      <input type="text" name="määrä"/><br/>
+      Ohje<br/>
+      <input type="text" name="ohje"/><br/>
+      <input type="submit" value="Lisää"/>
+      
+      
+        </form>
         
 
     </body>
