korjauksia smoothiet.html

--- a/src/main/resources/templates/smoothiet.html
+++ b/src/main/resources/templates/smoothiet.html
@@ -34,7 +34,7 @@
           </option>
       </select>
         <br/>
-        Mikä raaka-aine lisätään?
+        Mikä raaka-aine lisätään?<br/>
         <select name="raakaAine">
           <option th:each="raakaaine: ${raakaaineet}"
                   th:value="${raakaaine.nimi}"
