Pientä säätöä ja yritetty saada aikaan sivua, mille saisi listattua yhden smoothien ainesosat. SmoothieDao.findone(Sting nimi) metodia työstetty, ei tiedä toimiiko

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,7 @@
     </head>
 
     <body>
-        <h1>Heippa vaan!</h1>
+        <h1>Juomakanta</h1>
 
         <p>Ja .. <span th:text="${viesti}">jotain?</span></p>
         <p><a href="/smoothiet">Luo uusi smoothie</a></p>
