--- a/src/main/resources/templates/smoothiensivu.html
+++ b/src/main/resources/templates/smoothiensivu.html
@@ -10,7 +10,7 @@
         <h1>Smoothieitten raaka-aineet</h1>
 
         <ol>
-            <li th:each="smoothie: ${yksismoothie}">
+            <li th:each="smoothie: ${juoma}">
                 <span th:text="${smoothie.nimi}">smoothien nimi</span> 
             </li>
         </ol>
