yritetään saada listausta kaikista smoothien ainesosista smoothiedaon.findone metodissa. ei toimi.

--- a/src/main/resources/templates/smoothiensivu.html
+++ b/src/main/resources/templates/smoothiensivu.html
@@ -11,7 +11,9 @@
 
         <ol>
             <li th:each="smoothie: ${juoma}">
-                <span th:text="${smoothie.nimi}">smoothien nimi</span> 
+                <span th:text="${smoothie.nimi}">smoothien nimi</span>
+                <span th:text="${smoothie.ohje}">smoothien ohje</span>
+                    
             </li>
         </ol>
     </body>
