--- a/src/main/resources/templates/smoothiet.html
+++ b/src/main/resources/templates/smoothiet.html
@@ -24,7 +24,7 @@
             <input type="submit" value="Lisää uusi smoothie"/>
         </form>
         
-        <form method="POST" action="/smoothiet/ainesosalisatty">
+        <form method="POST" action="@{~/smoothiet/ainesosalisatty/">
             Smoothien nimi:<br/>
             <select name="smoothie">
                 <option th:each="smoothie: ${smoothiet}"
@@ -48,6 +48,7 @@
             <input type="text" name="määrä"/><br/>
             Ohje<br/>
             <input type="text" name="ohje"/><br/>
+            
             <input type="submit" value="Lisää"/>
 
 
