herokua varten valmis

--- a/src/main/resources/templates/raakaaineet.html
+++ b/src/main/resources/templates/raakaaineet.html
@@ -25,5 +25,7 @@
             <input type="text" name="uusiraakaaine"/>
             <input type="submit" value="lisää raaka-aine"/>
 </form>
+        
+        <a href="/smoothiet">Smoothie sivulle</a>
     </body>
 </html>
