--- a/src/main/resources/templates/smoothiet.html
+++ b/src/main/resources/templates/smoothiet.html
@@ -49,9 +49,7 @@
             </select>
             <br/>
 
-            <div>
-                Järjestys<br/>
-                <input type="text" name="jarjestys"/><br/>
+            <div>              
                 Määrä<br/>
                 <input type="text" name="maara"/><br/>
                 Ohje<br/>
@@ -62,6 +60,6 @@
 
         </form>
 
-
+<a href="/">Etusivulle</a>
     </body>
 </html>
