--- a/src/main/resources/templates/smoothiensivu.html
+++ b/src/main/resources/templates/smoothiensivu.html
@@ -22,7 +22,13 @@
             </li>
 
         </ul> 
-        
+        <ul>
+
+            <li th:each="maara:${maarat}">
+                <span th:text="${maara}">1</span>
+            </li>
+
+        </ul> 
         
         
         
