--- a/src/main/resources/templates/smoothiensivu.html
+++ b/src/main/resources/templates/smoothiensivu.html
@@ -18,15 +18,16 @@
         <ul>
 
             <li th:each="raakaaine:${raakaaineet}">
-                <span th:text="${raakaaine.nimi}">1</span>
+                <span th:text="${raakaaine}">1</span>
+            
             </li>
-
-        </ul> 
-        <ul>
-
             <li th:each="maara:${maarat}">
                 <span th:text="${maara}">1</span>
             </li>
+        </ul> 
+        <ul>
+
+            
 
         </ul> 
         
@@ -34,7 +35,7 @@
         
         <h3>Ohjeet</h3>
         <ol>
-            <li><span th:text="${ohjeet}"> </span></li>
+            <li><span th:text="${ohje}"> </span></li>
         </ol>    
 
 
