lisätty järjestyksen tulostus

--- a/src/main/resources/templates/smoothiet.html
+++ b/src/main/resources/templates/smoothiet.html
@@ -52,8 +52,8 @@
             <div>              
                 Määrä<br/>
                 <input type="text" name="maara"/><br/>
-                Ohje<br/>
-                <input type="text" name="ohje"/><br/>
+                Monesko raakaaine tämä on smoothieen?<br/>
+                <input type="text" name="monesko" value="0"/><br/>
 
                 <input type="submit" value="Lisää"/>
             </div>
