parannettiin monentena lisätään tulostusta

--- a/src/main/resources/templates/smoothiensivu.html
+++ b/src/main/resources/templates/smoothiensivu.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 
     <head>
-        <title>Otsikko</title>
+        <title>Smoothien sisältö - tee se näin!</title>
         <meta charset="utf-8" />
     </head>
 
@@ -34,9 +34,9 @@
         
         
         <h3>Ohjeet</h3>
-        <ol>
+        <ul>
             <li><span th:text="${ohje}"> </span></li>
-        </ol>    
+        </ul>    
 
 
 
